--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "framer-motion": "^10.12.21",
+    "json-server": "^0.17.3",
     "paginate": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.0.5",
     "typescript": "^5.1.6",
     "web-vitals": "^2.1.4"
   },
